Modified menu display to ensure it is visible.

--- a/CoreAttributeEditorView/src/au/gov/asd/tac/constellation/views/attributeeditor/resources/Style-AttributeEditor-Dark.css
+++ b/CoreAttributeEditorView/src/au/gov/asd/tac/constellation/views/attributeeditor/resources/Style-AttributeEditor-Dark.css
@@ -4,7 +4,13 @@
  * @author twinkle2_little
  */
 
+.menu-button {
+    -fx-background-color: #181818;
+}
 
+.menu:hover{
+    -fx-background-color: #0093FF;
+}
 
 /* ====== TOOLBAR CLASSES ================================================================= */
 
