--- a/CoreDataAccessView/src/au/gov/asd/tac/constellation/views/dataaccess/panes/resources/data-access-view.css
+++ b/CoreDataAccessView/src/au/gov/asd/tac/constellation/views/dataaccess/panes/resources/data-access-view.css
@@ -5,6 +5,14 @@
     -fx-cell-hover-color: -fx-shadow-highlight-color;
 }
 
+.menu-button {
+    -fx-background-color: #181818;
+}
+
+.menu:hover{
+    -fx-background-color: #0093FF;
+}
+
 .description-label {
     -fx-text-fill: rgb(200,200,200);
     -fx-font: normal 1.666673em "Arial"; /* 20pt */
